created greeting intro

--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
 peewee = "*"
 psycopg2-binary = "*"
+pyfiglet = "*"
 
 [requires]
 python_version = "3.7"
